--- a/9_text_align.html
+++ b/9_text_align.html
@@ -14,12 +14,15 @@
         }
         .text-content1{
             text-align: center;
+            text-decoration: underline;
         }
         .text-content2{
             text-align: right;
+            text-decoration: overline;
         }
         .text-content3{
             text-align: justify;
+            text-decoration: line-through;
         }
     </style>
 </head>
