--- a/16_form_styling_assignment.html
+++ b/16_form_styling_assignment.html
@@ -12,89 +12,75 @@
     />
     <style>
       * {
-        /* 
-        -May want to add "border-box for "box-sizing so padding does not affect width
-        -Reset margin and padding 
-       */
+        display: border-box;
+        margin: none;
+        padding: none;
+        font-family: "Raleway", sans-serif;
       }
 
       body {
-        /* 
-          -Background color is #344a72
-        */
+        background-color: #344a72;
       }
 
       a {
-        /* 
-        Underlined links are ugly :)
-       */
+        text-decoration: none;
       }
 
       #container {
-        /* 
-        -Remember, margin: auto on left and right will center a block element 
-        -I would also set a "max-width" for responsiveness
-        -May want to add some padding
-        */
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 500px;
+        padding-left: 20px;
+        padding-right: 20px;
       }
 
       .form-wrap {
-        /* 
-          This is the white area around the form and heading, etc
-        */
+        font-size: 14px;
+        background-color: aliceblue;
       }
 
       .form-wrap h1,
       .form-wrap p {
-        /* 
-          May want to center these
-        */
+        text-align: center;
       }
 
       .form-wrap .form-group {
-        /* 
-          Each label, input is wrapped in .form-group
-        */
+        padding-left: 10px;
+        padding-top: 20px;
+        padding-right: 20px;
+        display: block;
       }
 
       .form-wrap .form-group label {
-        /* 
-          Label should be turned into a block element
-        */
+      display: block;
       }
 
       .form-wrap .form-group input {
-        /* 
-          Inputs should reach accross the .form-wrap 100% and have some padding
-        */
+        height: 25px;
+        border-radius: 5px;
+        width: 100%;
       }
 
       .form-wrap button {
-        /* 
-          Button should wrap accross 100% and display as block
-          Background color for button is #49c1a2
-        */
+        display: block;
+        width:100%;
+        background-color:#49c1a2 ;
       }
 
       .form-wrap button:hover {
-        /* 
-          Hover background color for button is #37a08e
-        */
+        background-color: #37a08e;
       }
 
       .form-wrap .bottom-text {
-        /* 
-          Bottom text is smaller
-        */
+        font-size: 18px;
       }
 
       footer {
-        /* 
-        Should be centered
-       */
+        text-align: center;
       }
 
       footer a {
+        color: 49c1a2;
         /* 
           Footer link color is #49c1a2
         */
