Em & rem values

--- a/04_media_queries/01_intro.html
+++ b/04_media_queries/01_intro.html
@@ -74,6 +74,17 @@
             }
         }
 
+        @media (max-height:500px){
+            body{
+                background-color: black;
+                color: white;
+                padding-top: 500px;
+            }
+            .landscape h1{
+                display: block;
+            }
+        }
+
 
 
 
@@ -92,6 +103,9 @@
     </div>
     <div class="widescreen">
         <h1>Widescreen</h1>
+    </div>
+    <div class="landscape">
+        <h1>Landscape</h1>
     </div>
 </body>
 
